# mmdrl

./: .gitignore  create_runner.py  mmd_agent.py
configs/: mmd_atari.gin
dopamine/replay_memory/: circular_replay_buffer.py  prioritized_replay_buffer.py
dopamine/utils/: atari_lib.py
torchmmd/: dqn_agent.py  mmd_agent.py  particle_net.py  pyproject.toml
